// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/postmark SendEmail sends email with attachements 1`] = `
Ok {
  "value": Object {
    "messageId": "d2a957fc-2b98-4ba9-a960-4fd7c0292153",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "9a4c07a1-f023-475a-980b-a5a9eb29854d",
  },
}
`;

exports[`communication/send-email/postmark SendEmail when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"Error parsing 'To': Illegal email address 'invalidemail'. It must contain the '@' symbol.\\"
}
AST Path: definitions[0].statements[2].responseHandlers[1].statements[0]
Original Map Location: Line 39, column 7",
}
`;
